css did not work, it works now

--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page Title</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>ToDo App</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="todo-app"></div>
-      <h1>ToDo</h1>
-      <form class="input">
-        <input type="text" id="task-input" placeholder="Add new task..." />
-        <button type="submit" id="add-task-btn">Add</button>
-      </form>
-      <ul id="task-list"></ul>
-      <img class="empty" src="C:/Users/anany/Downloads/pandaPic2.png" alt="NOT FOUND">
-      <div class="footer">
-        <span id="task-count">0 tasks left</span>
-        <button id="clear-completed-btn">Clear Completed</button>
+      <div class="todo-app">
+        <h1>ToDo</h1>
+        <form class="input-box">
+          <input type="text" id="task-input" placeholder="Add new task..." />
+          <button type="submit" id="add-task-btn">Add</button>
+        </form>
+        <div class="todos-container">
+          <ul id="task-list"></ul>
+          <img class="empty" src="pandaPic2.png" alt="NOT FOUND" />
+        </div>
+        <div class="footer">
+          <span id="task-count">0 tasks left</span>
+          <button id="clear-completed-btn">Clear Completed</button>
+        </div>
+      </div>
     </div>
+    <script src="script.js"></script>
   </body>
-  <style src="style.css"></style>
-  <script src="script.js"></script>
 </html>
