--- a/index.html
+++ b/index.html
@@ -3,26 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDo App</title>
+    <title>ToDo</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <div class="todo-app">
-        <h1>ToDo</h1>
-        <form class="input-box">
-          <input type="text" id="task-input" placeholder="Add new task..." />
-          <button type="submit" id="add-task-btn">Add</button>
-        </form>
-        <div class="todos-container">
-          <ul id="task-list"></ul>
-          <img class="empty" src="pandaPic2.png" alt="NOT FOUND" />
-        </div>
-        <div class="footer">
-          <span id="task-count">0 tasks left</span>
-          <button id="clear-completed-btn">Clear Completed</button>
-        </div>
-      </div>
+      <button id="btn1"><a href="todo.html">btn1</href></button>
+      <button id="btn2">btn2</button>
+      <button id="btn3">btn3</button>
     </div>
     <script src="script.js"></script>
   </body>
