--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDo</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <button id="btn1"><a href="todo.html">btn1</href></button>
-      <button id="btn2">btn2</button>
-      <button id="btn3">btn3</button>
-    </div>
+    <nav class="navbar">
+      <button id="btn1"><a href="todo.html">todo</href></button>
+      <button id="btn2"><a href="todo.html">search</href></button>
+      <button id="btn3"><a href="notes.html">notes</href></button>
+      <form class="search-box">
+        <input type="text" id="search-input" placeholder="Search tasks..." />
+        <button id="search-btn">Search</button>
+      </form>  
+    </nav>        
+  <div class="NoResults">
+    <span id="search-count">0 results found</span>
+  </div>        
+
+    
     <script src="script.js"></script>
   </body>
 </html>
