login page was edited

--- a/html/login.html
+++ b/html/login.html
@@ -22,15 +22,9 @@
         <form class="input-box">
           <input type="text" id="task-input" placeholder="Re-Enter Password" />
         </form>
-        <div class="todos-container">
-          <ul id="task-list">
-            <li class="task">Math</li>
-            <li class="task">CompSci</li>
-          </ul>
-        </div>
         <div class="footer">
-          <span id="task-count">0 tasks left</span>
-          <button id="clear-completed-btn">Clear Completed</button>
+          <button type="submit" id="clear-completed-btn">Login</button>
+          <button id="clear-completed-btn">Sign Up</button>
         </div>
       </div>
     </div>
