--- a/todo.html
+++ b/todo.html
@@ -25,12 +25,12 @@
         </div>
         <div class="footer">
           <span id="task-count">0 tasks left</span>
-          <button id="clear-completed-btn">Clear Completed</button>
+          <button class="pink-btn">Clear Completed</button>
         </div>
       </div>
     </div>
 
-    <script src="../js/nav.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/todo.js"></script>
   </body>
 </html>
