--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <span id="search-count">0 results found</span>
     </div>
 
-    <script src="../js/nav.js"></script>
-    <script src="../js/script.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
