--- a/notes.html
+++ b/notes.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="navbar-container"></div>
-
+    <div id="notes-navbar-container"></div>
     <div class="notes-container">
       <div class="notes-app">
         <h1>Notes</h1>
@@ -18,9 +18,7 @@
           <button type="submit" id="add-note-btn">Add</button>
         </form>
         <div class="individual-notes-container">
-          <ul id="notes-list" class="note-list">
-            <!-- Notes will be dynamically added here by JavaScript -->
-          </ul>
+          <ul id="notes-list" class="note-list"></ul>
         </div>
         <div class="footer">
           <span id="note-count">0 notes left</span>
@@ -31,7 +29,7 @@
       </div>
     </div>
 
-    <script src="js/nav.js"></script>
+    <script src="js/notesnav.js"></script>
     <script src="js/notes.js"></script>
   </body>
 </html>
