--- a/notes.html
+++ b/notes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,10 +10,11 @@
   <body>
     <div id="navbar-container"></div>
     <div id="notes-navbar-container"></div>
+
     <div class="notes-container">
       <div class="notes-app">
         <h1>Notes</h1>
-        <form class="input-box">
+        <form class="input-box" id="note-form">
           <input type="text" id="notes-input" placeholder="Add new note..." />
           <button type="submit" id="add-note-btn">Add</button>
         </form>
@@ -22,6 +23,13 @@
         </div>
         <div class="footer">
           <span id="note-count">0 notes left</span>
+          <button
+            id="mindmap-btn"
+            class="pink-btn"
+            onclick="window.location.href='mindmap.html'"
+          >
+            + Mindmap
+          </button>
           <button id="clear-completed-btn" class="pink-btn">
             Clear Completed
           </button>
@@ -29,6 +37,7 @@
       </div>
     </div>
 
+    <script src="js/nav.js"></script>
     <script src="js/notesnav.js"></script>
     <script src="js/notes.js"></script>
   </body>
