--- a/todo.html
+++ b/todo.html
@@ -18,10 +18,7 @@
           <button type="submit" id="add-task-btn">Add</button>
         </form>
         <div class="todos-container">
-          <ul id="task-list">
-            <li class="task">Math</li>
-            <li class="task">CompSci</li>
-          </ul>
+          <ul id="task-list"></ul>
         </div>
         <div class="footer">
           <span id="task-count">0 tasks left</span>
