--- a/course-add.html
+++ b/course-add.html
@@ -14,7 +14,8 @@
       <span id="search-count">0 results found</span>
     </div>
 <button type="submit" id="login-btn" class="pink-btn">Add A Course</button>
-    <script src="js/nav.js"></script>
+    <!--<script src="js/nav.js"></script>
     <script src="js/script.js"></script>
+  -->
   </body>
 </html>
