added uploadFile.html for file upload feature

--- a/todo.html
+++ b/todo.html
@@ -22,7 +22,9 @@
         </div>
         <div class="footer">
           <span id="task-count">0 tasks left</span>
-          <button class="pink-btn">Clear Completed</button>
+          <button id="clear-completed-btn" class="pink-btn">
+            Clear Completed
+          </button>
         </div>
       </div>
     </div>
