--- a/notes.html
+++ b/notes.html
@@ -30,6 +30,13 @@
           >
             + Mindmap
           </button>
+          <button
+            id="mindmap-btn"
+            class="pink-btn"
+            onclick="window.location.href='uploadFile.html'"
+          >
+            Upload File
+          </button>
           <button id="clear-completed-btn" class="pink-btn">
             Clear Completed
           </button>
