--- a/course-add.html
+++ b/course-add.html
@@ -13,8 +13,12 @@
     <div class="NoResults">
       <span id="search-count">0 results found</span>
     </div>
-<button type="submit" id="login-btn" class="pink-btn">Add A Course</button>
+    <div class="course-add-container">
+      <div id="subject-box-container"></div>
+    </div>
+    <button type="submit" id="courseAdd" class="pink-btn">Add A Course</button>
     <script src="js/nav.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/course-add.js"></script>
   </body>
 </html>
