--- a/course.html
+++ b/course.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Course</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/course.css" />
+
+    <link rel="stylesheet" href="css/commonStuff.css" />
+    <link rel="stylesheet" href="css/nav-style.css" />
+    <link rel="stylesheet" href="css/todo.css" />
   </head>
+
   <body>
     <div id="navbar-container"></div>
     <div id="notes-navbar-container"></div>
@@ -28,9 +31,10 @@
             placeholder="description..."
           />
         </form>
-        <button type="submit" id="subjectAdd">Add</button>
+        <button type="submit" id="subjectAdd" class="pink-btn">Add</button>
       </div>
     </div>
+
     <script src="js/nav.js"></script>
     <script src="js/notesnav.js"></script>
     <script src="js/course.js"></script>
