--- a/mindmap.html
+++ b/mindmap.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mindmap</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="nav.css" />
-    <link rel="stylesheet" href="css/mindmap-style.css" />
+    <link rel="stylesheet" href="css/nav-style.css" />
+    <link rel="stylesheet" href="css/mindmap.css" />
   </head>
+
   <body>
     <div id="navbar-container"></div>
     <h1>MindMap</h1>
     <svg></svg>
+
     <script src="js/nav.js"></script>
     <script src="js/mindmap.js"></script>
   </body>
