--- a/uploadFile.html
+++ b/uploadFile.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mindmap</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="nav.css" />
+    <link rel="stylesheet" href="css/nav-style.css" />
     <link rel="stylesheet" href="css/mindmap-style.css" />
   </head>
   <body>
