--- a/notes.html
+++ b/notes.html
@@ -23,20 +23,7 @@
         </div>
         <div class="footer">
           <span id="note-count">0 notes left</span>
-          <button
-            id="mindmap-btn"
-            class="pink-btn"
-            onclick="window.location.href='mindmap.html'"
-          >
-            + Mindmap
-          </button>
-          <button
-            id="mindmap-btn"
-            class="pink-btn"
-            onclick="window.location.href='uploadFile.html'"
-          >
-            Upload File
-          </button>
+          <button id="mindmap-btn" class="pink-btn">+ Mindmap</button>
           <button id="clear-completed-btn" class="pink-btn">
             Clear Completed
           </button>
