--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 
     <div class="container">
       <div class="todo-app">
-        <h1 id="form-title">Sign In</h1>
+        <h1 id="form-title">LOGIN</h1>
 
         <div class="input-box">
           <input type="text" id="username" placeholder="Username" />
