--- a/mindmap.html
+++ b/mindmap.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mindmap</title>
-    <link rel="stylesheet" href="css/nav-style.css" />
-    <link rel="stylesheet" href="css/mindmap.css" />
+    <link rel="stylesheet" href="nav-style.css" />
+    <link rel="stylesheet" href="css/mindmap-style.css" />
   </head>
-
   <body>
     <div id="navbar-container"></div>
-    <h1>MindMap</h1>
+    <div id="container">
+      <h1>MindMap</h1>
+      <button id="ideaAdd" class="pink-btn">Add</button>
+      <button id="back" class="delete-btn">back</button>
+      <button id="save" class="save-btn">save</button>
+    </div>
     <svg></svg>
-
     <script src="js/nav.js"></script>
     <script src="js/mindmap.js"></script>
   </body>
