nav finally works on mindmap.html

--- a/mindmap.html
+++ b/mindmap.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mindmap</title>
-    <link rel="stylesheet" href="nav-style.css" />
     <link rel="stylesheet" href="css/mindmap-style.css" />
+    <link rel="stylesheet" href="css/mindmap-nav-style.css" />
   </head>
   <body>
     <div id="navbar-container"></div>
-    <div id="container">
-      <h1>MindMap</h1>
-      <button id="ideaAdd" class="pink-btn">Add</button>
-      <button id="back" class="delete-btn">back</button>
-      <button id="save" class="save-btn">save</button>
-    </div>
+    <h1>MindMap</h1>
+    <button id="ideaAdd" class="pink-btn">Add</button>
+    <button id="back" class="delete-btn">back</button>
+    <button id="save" class="save-btn">save</button>
     <svg></svg>
     <script src="js/nav.js"></script>
     <script src="js/mindmap.js"></script>
