notes style fixed, button for image added

--- a/course.html
+++ b/course.html
@@ -32,7 +32,7 @@
           />
         </form>
         <footer>
-          <button type="submit" id="subjectAdd" class="pink-btn">Add</button>
+          <button type="button" id="subjectAdd" class="pink-btn">Add</button>
           <button
             onclick="window.location.href='course-add.html'"
             class="pink-btn"
