--- a/notes.html
+++ b/notes.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/notes-style.css" />
   </head>
   <body>
+    `
     <div id="navbar-container"></div>
 
     <div class="notes-container">
@@ -17,15 +18,21 @@
           <input type="text" id="notes-input" placeholder="Add new note..." />
           <button type="submit" id="add-note-btn">Add</button>
         </form>
+
         <div class="individual-notes-container">
           <ul id="notes-list" class="note-list"></ul>
         </div>
         <div class="footer">
-          <span id="note-count">0 notes left</span>
-          <button id="mindmap-btn" class="pink-btn">+ Mindmap</button>
-          <button id="clear-completed-btn" class="pink-btn">
-            Clear Completed
-          </button>
+          <div class="notes-choice">
+            <button id="mindmap-btn" class="pink-btn">+ Mindmap</button>
+            <button id="image-btn" class="pink-btn">+ Image</button>
+            <button
+              onclick="window.location.href='course-add.html'"
+              class="pink-btn"
+            >
+              Back
+            </button>
+          </div>
         </div>
       </div>
     </div>
