--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="css/commonStuff.css" />
+
+    <link rel="stylesheet" href="css/notes-style.css" />
     <link rel="stylesheet" href="css/nav-style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div id="navbar-container"></div>
 
+    <div class="notes-app">
+      <h1 class="home-h1"></h1>
+    </div>
     <div class="NoResults">
       <span id="search-count">0 results found</span>
     </div>
