--- a/notes.html
+++ b/notes.html
@@ -25,7 +25,7 @@
         <div class="footer">
           <div class="notes-choice">
             <button id="mindmap-btn" class="pink-btn">+ Mindmap</button>
-            <button id="image-btn" class="pink-btn">+ Image</button>
+            <button id="image-btn" class="pink-btn">+ Image To Text</button>
             <button
               onclick="window.location.href='course-add.html'"
               class="pink-btn"
